--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/capstone_db
-    username: springstudent
-    password: springstudent
+    username: capstone
+    password: capstone
   jpa:
     hibernate:
       ddl-auto: update
