--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,7 @@ spring:
       ddl-auto: update
 
   kafka:
-    bootstrap-servers: localhost:9092
-    # Minimal config since we do a consumer factory in code
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: tool-scheduler-group
+    topic: jfc_tool
